[gd_scene load_steps=21 format=3 uid="uid://dtd463lelc5rl"]

[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/triangulo1.gd" id="1_kx4e4"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/box(puzzle).gd" id="1_q8r5k"]
[ext_resource type="Texture2D" uid="uid://bced4fkd1xlmd" path="res://assets/box/58afdaa0829958a978a4a68a-2796067814.png" id="2_ef7p6"]
[ext_resource type="FontFile" uid="uid://cbu68tu4ukqhr" path="res://Fonts/comickbook/ComickBook_CAPS.ttf" id="2_rv7y8"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/triangulo_2.gd" id="3_2dbia"]
[ext_resource type="PackedScene" uid="uid://c5xn43o1f54s1" path="res://Scenes/Extras/clock_timer.tscn" id="3_35mhj"]
[ext_resource type="Texture2D" uid="uid://dgum86o46qo3m" path="res://assets/box/1024px-Triángulo_rectángulo_escaleno.svg-2867338663.png" id="3_i2ac1"]
[ext_resource type="Texture2D" uid="uid://dnhpp65l5py1c" path="res://assets/box/png-square-shape-red-square-shape-clipart-2400-4198490413.png" id="4_tsph5"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/triangulo_3.gd" id="4_u8qju"]
[ext_resource type="Texture2D" uid="uid://bsv1tpcnysnc0" path="res://assets/box/trapecio-3-e1559285070945-removebg-preview(1).png" id="5_82i5f"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/triangulo_4.gd" id="5_c0vcg"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/rectangulo.gd" id="6_d28cd"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/cuadrado_1.gd" id="8_rvb2p"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/scripts/cuadrado_2.gd" id="10_ngvi1"]
[ext_resource type="Script" path="res://Scenes/Box puzzle/trapezoide.gd" id="11_2sqyo"]

[sub_resource type="LabelSettings" id="LabelSettings_lhbve"]

[sub_resource type="Animation" id="Animation_i0amt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l0obv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1tse1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bty0q"]
_data = {
"RESET": SubResource("Animation_i0amt"),
"fade_in": SubResource("Animation_l0obv"),
"fade_out": SubResource("Animation_1tse1")
}

[node name="box(puzzle)" type="Node2D"]
script = ExtResource("1_q8r5k")

[node name="TimerC" type="Label" parent="."]
offset_left = 1.0
offset_right = 97.0
offset_bottom = 55.0
scale = Vector2(2.11, 2.11)
theme_override_fonts/font = ExtResource("2_rv7y8")
label_settings = SubResource("LabelSettings_lhbve")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 2

[node name="ClockTimer" parent="." instance=ExtResource("3_35mhj")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 721.0
color = Color(0.119942, 0.318655, 0.423765, 1)

[node name="Figura_que_rellenar" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="Figura_que_rellenar"]
offset_left = 538.0
offset_top = 221.0
offset_right = 1259.0
offset_bottom = 527.0

[node name="Figuras" type="Node2D" parent="."]

[node name="triangulo1" type="Node2D" parent="Figuras"]
script = ExtResource("1_kx4e4")

[node name="triangulo1" type="TextureRect" parent="Figuras/triangulo1"]
offset_left = 18.0
offset_top = -20.0
offset_right = 1042.0
offset_bottom = 1004.0
scale = Vector2(0.244629, 0.334961)
texture = ExtResource("3_i2ac1")

[node name="Area2D" type="Area2D" parent="Figuras/triangulo1/triangulo1"]
position = Vector2(-147.162, -229.878)

[node name="Collision_fig_triang1" type="CollisionPolygon2D" parent="Figuras/triangulo1/triangulo1/Area2D"]
polygon = PackedVector2Array(290.236, 417.959, 298.411, 1003.1, 1026.04, 1006.09)

[node name="triangulo2" type="Node2D" parent="Figuras"]
script = ExtResource("3_2dbia")

[node name="triangulo2" type="TextureRect" parent="Figuras/triangulo2"]
offset_left = 474.0
offset_top = 417.0
offset_right = 1498.0
offset_bottom = 1441.0
rotation = 3.13533
scale = Vector2(0.371839, 0.521595)
texture = ExtResource("3_i2ac1")

[node name="Area2D" type="Area2D" parent="Figuras/triangulo2/triangulo2"]

[node name="Colloson_fig_triang2" type="CollisionPolygon2D" parent="Figuras/triangulo2/triangulo2/Area2D"]
polygon = PackedVector2Array(891.45, 774.708, 143.588, 186.613, 146.485, 775.216)

[node name="triangulo3" type="Node2D" parent="Figuras"]
script = ExtResource("4_u8qju")

[node name="triangulo3" type="TextureRect" parent="Figuras/triangulo3"]
offset_left = 389.0
offset_top = 521.0
offset_right = 1413.0
offset_bottom = 1545.0
scale = Vector2(0.262939, 0.197754)
texture = ExtResource("3_i2ac1")

[node name="Area2D" type="Area2D" parent="Figuras/triangulo3/triangulo3"]

[node name="Collision_fig_triang3" type="CollisionPolygon2D" parent="Figuras/triangulo3/triangulo3/Area2D"]
polygon = PackedVector2Array(144.52, 187.101, 140.717, 773.689, 893.743, 778.745)

[node name="triangulo4" type="Node2D" parent="Figuras"]
script = ExtResource("5_c0vcg")

[node name="triangulo4" type="TextureRect" parent="Figuras/triangulo4"]
offset_left = 714.0
offset_top = 181.0
offset_right = 1738.0
offset_bottom = 1205.0
rotation = 3.14159
scale = Vector2(0.258968, 0.197754)
texture = ExtResource("3_i2ac1")

[node name="Area2D" type="Area2D" parent="Figuras/triangulo4/triangulo4"]

[node name="Collision_fig_triang4" type="CollisionPolygon2D" parent="Figuras/triangulo4/triangulo4/Area2D"]
polygon = PackedVector2Array(892.001, 778.748, 146.735, 778.746, 146.736, 182.045)

[node name="rectangulo" type="Node2D" parent="Figuras"]
script = ExtResource("6_d28cd")

[node name="rectangulo" type="TextureRect" parent="Figuras/rectangulo"]
offset_left = 464.0
offset_top = 360.0
offset_right = 843.0
offset_bottom = 664.0
rotation = 1.5708
texture = ExtResource("2_ef7p6")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="Figuras/rectangulo/rectangulo"]

[node name="Collision_fig_rect" type="CollisionPolygon2D" parent="Figuras/rectangulo/rectangulo/Area2D"]
polygon = PackedVector2Array(40.0008, 224, 341.001, 223.999, 341, 75.9988, 40.0003, 76.9999)

[node name="cuadrado1" type="Node2D" parent="Figuras"]
script = ExtResource("8_rvb2p")

[node name="cuadrado1" type="TextureRect" parent="Figuras/cuadrado1"]
offset_left = 15.0
offset_top = 271.0
offset_right = 2415.0
offset_bottom = 2671.0
scale = Vector2(0.0966666, 0.0954167)
texture = ExtResource("4_tsph5")

[node name="Area2D" type="Area2D" parent="Figuras/cuadrado1/cuadrado1"]

[node name="Collision_fig_cuadr1" type="CollisionPolygon2D" parent="Figuras/cuadrado1/cuadrado1/Area2D"]
polygon = PackedVector2Array(186.207, 188.646, 186.207, 2211.35, 2213.79, 2211.35, 2213.79, 188.646)

[node name="cuadrado2" type="Node2D" parent="Figuras"]
script = ExtResource("10_ngvi1")

[node name="cuadrado2" type="TextureRect" parent="Figuras/cuadrado2"]
offset_left = 17.0
offset_top = 493.0
offset_right = 2417.0
offset_bottom = 2893.0
scale = Vector2(0.0966666, 0.095)
texture = ExtResource("4_tsph5")

[node name="Area2D" type="Area2D" parent="Figuras/cuadrado2/cuadrado2"]

[node name="Collision_fig_cuadr2" type="CollisionPolygon2D" parent="Figuras/cuadrado2/cuadrado2/Area2D"]
polygon = PackedVector2Array(196.552, 189.474, 196.552, 2210.53, 2213.79, 2210.53, 2213.79, 189.474)

[node name="trapezoide" type="Node2D" parent="Figuras"]
script = ExtResource("11_2sqyo")

[node name="trapezoide" type="TextureRect" parent="Figuras/trapezoide"]
offset_left = 630.0
offset_top = -7.0
offset_right = 1337.0
offset_bottom = 346.0
scale = Vector2(0.557284, 0.493272)
texture = ExtResource("5_82i5f")

[node name="Area2D" type="Area2D" parent="Figuras/trapezoide/trapezoide"]

[node name="Collision_fig_trap" type="CollisionPolygon2D" parent="Figuras/trapezoide/trapezoide/Area2D"]
polygon = PackedVector2Array(174.058, 75.0093, 174.058, 306.119, 538.325, 304.092, 349.911, 75.0093)

[node name="Colliders_figuras" type="Node2D" parent="."]

[node name="triangulo_1" type="Area2D" parent="Colliders_figuras" groups=["Triangulo1"]]
position = Vector2(1005, 189)
scale = Vector2(0.244629, 0.334961)

[node name="Collision_spc_triang1" type="CollisionPolygon2D" parent="Colliders_figuras/triangulo_1"]
position = Vector2(903.409, 937.423)
scale = Vector2(0.0645823, 0.0523478)
polygon = PackedVector2Array(290.236, 417.959, 298.411, 1003.1, 1026.04, 1006.09)

[node name="triangulo_2" type="Area2D" parent="Colliders_figuras" groups=["Triangulo2"]]
position = Vector2(1005, 189)
scale = Vector2(0.244629, 0.334961)

[node name="Collision_spc_triang2" type="CollisionPolygon2D" parent="Colliders_figuras/triangulo_2"]
position = Vector2(989.253, 98.5189)
scale = Vector2(0.0392572, 0.0503529)
polygon = PackedVector2Array(1034.22, 1006.09, 450.07, 543.036, -114.459, 95.5335, 1038.31, 98.519)

[node name="triangulo_3" type="Area2D" parent="Colliders_figuras" groups=["Triangulo3"]]

[node name="Collision_spc_triang3" type="CollisionPolygon2D" parent="Colliders_figuras/triangulo_3"]
position = Vector2(834, 464)
scale = Vector2(0.0738637, 0.0913463)
polygon = PackedVector2Array(426, 558, 426, 674, 624, 675)

[node name="triangulo_4" type="Area2D" parent="Colliders_figuras" groups=["Triangulo4"]]
scale = Vector2(0.258968, 0.197754)

[node name="Collision_spc_triang4" type="CollisionPolygon2D" parent="Colliders_figuras/triangulo_4"]
position = Vector2(3417.41, 2659.87)
rotation = 3.14159
scale = Vector2(0.0448183, 0.0851218)
polygon = PackedVector2Array(892.001, 778.748, 146.735, 778.746, 146.736, 182.045)

[node name="rectangulo" type="Area2D" parent="Colliders_figuras" groups=["rectangulo"]]

[node name="Collision_spc_rec" type="CollisionPolygon2D" parent="Colliders_figuras/rectangulo"]
position = Vector2(657, 504)
scale = Vector2(0.052365, 0.0291621)
polygon = PackedVector2Array(240, 401, 240, 701, 388, 700.938, 387, 401)

[node name="cuadrado1" type="Area2D" parent="Colliders_figuras" groups=["cuadrado1"]]
scale = Vector2(0.0966666, 0.0954167)

[node name="Collision_spc_cua1" type="CollisionPolygon2D" parent="Colliders_figuras/cuadrado1"]
position = Vector2(8976.15, 2320.53)
scale = Vector2(0.0660166, 0.0728259)
polygon = PackedVector2Array(186.207, 188.646, 186.207, 2211.35, 2213.79, 2211.35, 2213.79, 188.646)

[node name="cuadrado2" type="Area2D" parent="Colliders_figuras" groups=["cuadrado2"]]
scale = Vector2(0.0966666, 0.095)

[node name="Collision_spc_cua2" type="CollisionPolygon2D" parent="Colliders_figuras/cuadrado2"]
position = Vector2(11048.3, 5389.47)
scale = Vector2(0.0608965, 0.06706)
polygon = PackedVector2Array(196.552, 189.474, 196.552, 2210.53, 2213.79, 2210.53, 2213.79, 189.474)

[node name="trapezoide" type="Area2D" parent="Colliders_figuras" groups=["trapezoide"]]
position = Vector2(789, 184)
scale = Vector2(0.557284, 0.493272)

[node name="Collision_spc_trap" type="CollisionPolygon2D" parent="Colliders_figuras/trapezoide"]
position = Vector2(168.675, 77.0366)
scale = Vector2(0.0670829, 0.0833334)
polygon = PackedVector2Array(174.058, 75.0093, 174.058, 306.119, 538.325, 304.092, 349.911, 75.0093)

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bty0q")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
offset_right = 1282.0
offset_bottom = 719.0
color = Color(0, 0, 0, 1)

[connection signal="area_entered" from="Figuras/triangulo1/triangulo1/Area2D" to="Figuras/triangulo1" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/triangulo1/triangulo1/Area2D" to="Figuras/triangulo1" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/triangulo1/triangulo1/Area2D" to="Figuras/triangulo1" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Figuras/triangulo2/triangulo2/Area2D" to="Figuras/triangulo2" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/triangulo2/triangulo2/Area2D" to="Figuras/triangulo2" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/triangulo2/triangulo2/Area2D" to="Figuras/triangulo2" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Figuras/triangulo3/triangulo3/Area2D" to="Figuras/triangulo3" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/triangulo3/triangulo3/Area2D" to="Figuras/triangulo3" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/triangulo3/triangulo3/Area2D" to="Figuras/triangulo3" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Figuras/triangulo4/triangulo4/Area2D" to="Figuras/triangulo4" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/triangulo4/triangulo4/Area2D" to="Figuras/triangulo4" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/triangulo4/triangulo4/Area2D" to="Figuras/triangulo4" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Figuras/rectangulo/rectangulo/Area2D" to="Figuras/rectangulo" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/rectangulo/rectangulo/Area2D" to="Figuras/rectangulo" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/rectangulo/rectangulo/Area2D" to="Figuras/rectangulo" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Figuras/cuadrado1/cuadrado1/Area2D" to="Figuras/cuadrado1" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/cuadrado1/cuadrado1/Area2D" to="Figuras/cuadrado1" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/cuadrado1/cuadrado1/Area2D" to="Figuras/cuadrado1" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Figuras/cuadrado2/cuadrado2/Area2D" to="Figuras/cuadrado2" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/cuadrado2/cuadrado2/Area2D" to="Figuras/cuadrado2" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/cuadrado2/cuadrado2/Area2D" to="Figuras/cuadrado2" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Figuras/trapezoide/trapezoide/Area2D" to="Figuras/trapezoide" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Figuras/trapezoide/trapezoide/Area2D" to="Figuras/trapezoide" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Figuras/trapezoide/trapezoide/Area2D" to="Figuras/trapezoide" method="_on_area_2d_input_event"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
